--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -4,3 +4,9 @@ version = "1.87.0"
 edition = "2024"
 
 [dependencies]
+cargo-partisia-contract = "5.204.0"
+clap = "4.5.38"
+cliclack = "0.3.6"
+tera = "1.20.0"
+tokio = "1.45.0"
+tokio-test = "0.4.4"
