--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -26,6 +26,7 @@ read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/langu
 read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
 create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
 pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
+serde_json = "1.0.140"
 
 [features]
 abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "create_type_spec_derive/abi", "pbc_lib/abi"]
