minor fixes according to code suggestions

--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -7,7 +7,7 @@ description.workspace = true
 license.workspace = true
 
 [[bin]]
-name = "Partizee"
+name = "partizee"
 path = "src/main.rs"
 
 [dependencies]
