--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -27,7 +27,9 @@ create_type_spec_derive = { workspace = true }
 pbc_zk = { workspace = true }
 serde_json = { workspace = true }
 getrandom = { workspace = true }
-walkdir = "2.5.0"
+dirs = { workspace = true }
+walkdir = { workspace = true }
+base64 = "0.22.1"
 
 [target.wasm32-unknown-unknown]
 rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
