--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -31,6 +31,12 @@ dirs = { workspace = true }
 walkdir = { workspace = true }
 base64 = "0.22.1"
 serde = "1.0.219"
+bip39 = "2.1.0"
+bip32 = "0.5.3"
+pbkdf2 = "0.12.2"
+unicode-normalization = "0.1.22"
+hmac-sha512 = "1.1.7"
+hdpath = "0.5.0"
 k256 = { version = "0.13", features = ["arithmetic"] }
 sha2 = "0.10"
 hex = "0.4"
