--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ cargo-partisia-contract = "5.204.0"
 clap = "4.5.38"
 cliclack = "0.3.6"
 tera = "1.20.0"
-tokio = "1.35.0"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+# tokio = "1.35.0"
 tokio-test = "0.4.4"
 pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
 pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
