--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -16,7 +16,7 @@ clap = { workspace = true }
 cliclack = { workspace = true }
 tera = { workspace = true }
 tokio = { workspace = true }
-# tokio-test = { workspace = true }
+tokio-test = { workspace = true, optional = true }
 pbc_contract_common = { workspace = true }
 pbc_contract_codegen = { workspace = true }
 pbc_traits = { workspace = true }
@@ -29,6 +29,7 @@ serde_json = { workspace = true }
 getrandom = { workspace = true }
 dirs = { workspace = true }
 walkdir = { workspace = true }
+reqwest = "0.11"
 base64 = "0.22.1"
 serde = "1.0.219"
 bip39 = "2.1.0"
@@ -46,4 +47,5 @@ rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
 
 [features]
 abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "create_type_spec_derive/abi", "pbc_lib/abi"]
+async-test = ["tokio-test"]
 
