--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -18,6 +18,7 @@ tera = { workspace = true }
 tokio = { workspace = true }
 tokio-test = { workspace = true, optional = true }
 pbc_contract_common = { workspace = true }
+pbc_abi = { workspace = true }
 pbc_contract_codegen = { workspace = true }
 pbc_traits = { workspace = true }
 pbc_lib = { workspace = true }
