--- a/packages/rust/Cargo.toml
+++ b/packages/rust/Cargo.toml
@@ -35,6 +35,7 @@ base64 = "0.22.1"
 serde = "1.0.219"
 bip39 = "2.1.0"
 bip32 = "0.5.3"
+rand = "0.8.5"
 pbkdf2 = "0.12.2"
 unicode-normalization = "0.1.22"
 hmac-sha512 = "1.1.7"
