fixed file copying to use rust-embed

--- a/partizee_cli/Cargo.toml
+++ b/partizee_cli/Cargo.toml
@@ -30,6 +30,7 @@ serde_json = { workspace = true }
 getrandom = { workspace = true }
 dirs = { workspace = true }
 walkdir = { workspace = true }
+rust-embed = "8.7.2"
 reqwest = "0.11"
 base64 = "0.22.1"
 serde = "1.0.219"
