--- a/partizee_cli/Cargo.toml
+++ b/partizee_cli/Cargo.toml
@@ -31,6 +31,7 @@ dirs = { workspace = true }
 walkdir = { workspace = true }
 rust-embed = "8.7.2"
 reqwest = "0.11"
+tempfile = "3.20.0"
 base64 = "0.22.1"
 serde = "1.0.219"
 bip39 = "2.1.0"
